--- a/TeamMaker/Login/Login.css
+++ b/TeamMaker/Login/Login.css
@@ -1,6 +1,58 @@
+
+
+body{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 30% 100% 25%;
+}
+
+header{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 100%;
+}
+
+footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 100%;
+}
+
 p#dni_error{
     color: red;
 }
+
 p#password_error{
     color: red;
 }
+
+main{
+    text-align: center;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
+
+h1{
+    font-family: 'Courgette', cursive;
+    font-weight: bold;
+    font-size: 100px;
+    font-style: italic;
+}
+
+input{
+    font-size: 100%;
+    outline: none;
+    width: 700px;
+    height: 60px;
+    margin-bottom: 1%;
+}
+
+input[type=submit]{
+    font-size: 100%;
+    outline: none;
+    width: 275px;
+    height: 75px;
+    margin-top: 2%;
+}
+
+
