--- a/TeamMaker/Login/Login.css
+++ b/TeamMaker/Login/Login.css
@@ -1,11 +1,13 @@
-html{
+*{
     padding: 0;
+    margin: 0;
 }
 
 body{
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 30% 100% 25%;
+    grid-template-rows: 30% 100% 20%;
+    overflow: hidden;
 }
 
 header{
@@ -21,18 +23,21 @@ footer{
     grid-template-rows: 100%;
 }
 
-p#dni_error{
+#dni_error{
     color: red;
 }
 
-p#password_error{
+#password_error{
     color: red;
 }
 
 main{
+    padding-bottom: 75px;
+    padding-top: 65px;
     text-align: center;
     grid-row-start: 2;
     grid-row-end: 2;
+    background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
 }
 
 h1{
@@ -40,6 +45,7 @@ h1{
     font-weight: bold;
     font-size: 100px;
     font-style: italic;
+    color:rgb(24, 24, 24);
 }
 
 input{
@@ -48,14 +54,6 @@ input{
     width: 700px;
     height: 60px;
     margin-bottom: 1%;
-}
-
-input[type=submit]{
-    font-size: 100%;
-    outline: none;
-    width: 275px;
-    height: 75px;
-    margin-top: 2%;
 }
 
 #img_header0{
@@ -81,7 +79,8 @@ input[type=submit]{
 #img_header4{
     padding-top: 0;
     background-image: url("Logo.png");
-    background-size: 100%;
+    background-size: 90%;
+    background-position: center;
 }
 #img_header5{
     padding-top: 0;
@@ -103,5 +102,205 @@ input[type=submit]{
     background-image: url("Fondo.png");
     background-size: 100%;
 }
+#img_footer0{
+    padding-top: 0;
+    background-image: url("Fondo.png");
+    background-size: 100%;
+}
+#img_footer1{
+    padding-top: 0;
+    background-image: url("Fondo.png");
+    background-size: 100%;
+}
+#img_footer2{
+    padding-top: 0;
+    background-image: url("Fondo.png");
+    background-size: 100%;
+}
+#img_footer3{
+    padding-top: 0;
+    background-image: url("Fondo.png");
+    background-size: 100%;
+}
+#img_footer4{
+    padding-top: 0;
+    background-image: url("Fondo.png");
+    background-size: 100%;
+}
+#img_footer5{
+    padding-top: 0;
+    background-image: url("Fondo.png");
+    background-size: 100%;
+}
+#usuario{
+    margin-top: 50px;
+}
+#password{
+    margin-top: 20px;
+}
+#acceder{
+    margin-top: 50px;
+    font-size: 100%;
+    outline: none;
+    width: 275px;
+    height: 75px;
+    border: solid 2px #78C48D;
+    border-radius: 50px;
+    background-color: #a7fabe;
+}
 
+@media (max-width:576px){
+
+    *{
+        padding: 0;
+        margin: 0;
+    }
+    
+    body{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 10% 200% 5%;
+        overflow: hidden;
+    }
+    
+    header{
+        padding-top: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+    
+    footer{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 100%;
+    }
+    
+    #dni_error{
+        color: red;
+    }
+    
+    #password_error{
+        color: red;
+    }
+    
+    main{
+        padding-bottom: 75px;
+        padding-top: 65px;
+        text-align: center;
+        grid-row-start: 2;
+        grid-row-end: 2;
+        background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
+    }
+    
+    h1{
+        font-family: 'Courgette', cursive;
+        font-weight: bold;
+        font-size: 100px;
+        font-style: italic;
+        color:rgb(24, 24, 24);
+    }
+    
+    input{
+        font-size: 100%;
+        outline: none;
+        width: 700px;
+        height: 60px;
+        margin-bottom: 1%;
+    }
+    
+    #img_header0{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_header1{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_header2{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_header3{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_header4{
+        padding-top: 0;
+        background-image: url("Logo.png");
+        background-size: 90%;
+        background-position: center;
+    }
+    #img_header5{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_header6{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_header7{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_header8{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_footer0{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_footer1{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_footer2{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_footer3{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_footer4{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_footer5{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #usuario{
+        margin-top: 50px;
+    }
+    #password{
+        margin-top: 20px;
+    }
+    #acceder{
+        margin-top: 50px;
+        font-size: 100%;
+        outline: none;
+        width: 275px;
+        height: 75px;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+
+}
 
