--- a/TeamMaker/Login/Login.css
+++ b/TeamMaker/Login/Login.css
@@ -91,28 +91,28 @@ input{
     background-color: #a7fabe;
 }
 
-@media only screen and (min-width: 200px) and (max-width: 585px){
+@media only screen and (min-width: 200px) and (max-width: 577px){
     *{
         padding: 0;
         margin: 0;
     }
     body{
         display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 70% 500% 50%;
+        grid-template-columns: 1fr;
+        grid-template-rows: 3.5fr 15fr 2.5fr;
         overflow: hidden;
     }
 
     header{
         padding-top: 0;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: 100%;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
     }
     footer{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: 100%;
+        grid-template-rows: 1fr;
     }
     #dni_error{
         color: red;
@@ -122,48 +122,46 @@ input{
         color: red;
     }
     main{
-/*         padding-bottom: 75px;
-        padding-top: 65px;
+        
+        padding-bottom: 30%;
+        padding-top: 20%;
         text-align: center;
         grid-row-start: 2;
         grid-row-end: 2;
-        background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1); */
-        background-color: rgb(24, 24, 24);
+        background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
+
     }
     
     h1{
         font-family: 'Courgette', cursive;
         font-weight: bold;
-        font-size: 100px;
+        font-size: 330%;
         font-style: italic;
-        /* color: rgb(24, 24, 24); */
-        color:rgb(252, 0, 0);
+        color: rgb(24, 24, 24);
+        margin-bottom: 5%;
     }
 
     input{
-        font-size: 100%;
+        font-size: 75%;
         outline: none;
-        width: 700px;
-        height: 60px;
+        width: 75%;
+        height: 10%;
         margin-bottom: 1%;
     }
-    #img_header0, #img_header1, #img_header2, #img_header3, #img_header5, #img_header6, #img_header7, #img_header8{
+    #img_header0, #img_header2{
         padding-top: 0;
-        /* background-image: url("Fondo.png"); */
-        background-color: rgb(24, 24, 24);
+        background-image: url("Fondo.png");
         background-size: 100%;
     }
-    #img_header4{
+    #img_header1{
         padding-top: 0;
-        /* background-image: url("Logo.png"); */
-        background-color: rgb(24, 24, 24);
+        background-image: url("Logo.png");
         background-size: 90%;
         background-position: center;
     }
     #img_footer0, #img_footer1, #img_footer2, #img_footer3, #img_footer4, #img_footer5{
         padding-top: 0;
-        /* background-image: url("Fondo.png"); */
-        background-color: rgb(24, 24, 24);
+        background-image: url("Fondo.png");
         background-size: 100%;
     }
     #usuario{
@@ -173,11 +171,11 @@ input{
         margin-top: 20px;
     }
     #acceder{
-        margin-top: 50px;
+        margin-top: 10%;
         font-size: 100%;
         outline: none;
-        width: 275px;
-        height: 75px;
+        width: 40%;
+        height: 20%;
         border: solid 2px #78C48D;
         border-radius: 50px;
         background-color: #a7fabe;
