--- a/TeamMaker/Login/Login.css
+++ b/TeamMaker/Login/Login.css
@@ -14,13 +14,13 @@ header{
     padding-top: 0;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 100%;
+    grid-template-rows: 1fr;
 }
 
 footer{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 100%;
+    grid-template-rows: 1fr;
 }
 
 #dni_error{
@@ -32,8 +32,8 @@ footer{
 }
 
 main{
-    padding-bottom: 75px;
-    padding-top: 65px;
+    padding-bottom: 5%;
+    padding-top: 4%;
     text-align: center;
     grid-row-start: 2;
     grid-row-end: 2;
@@ -43,7 +43,7 @@ main{
 h1{
     font-family: 'Courgette', cursive;
     font-weight: bold;
-    font-size: 100px;
+    font-size: 650%;
     font-style: italic;
     color:rgb(24, 24, 24);
 }
@@ -51,8 +51,8 @@ h1{
 input{
     font-size: 100%;
     outline: none;
-    width: 700px;
-    height: 60px;
+    width: 40%;
+    height: 15%;
     margin-bottom: 1%;
 }
 
@@ -75,27 +75,29 @@ input{
     background-size: 100%;
 }
 #usuario{
-    margin-top: 50px;
+    margin-top: 4%;
 }
 #password{
-    margin-top: 20px;
+    margin-top: 1%;
 }
 #acceder{
-    margin-top: 50px;
+    margin-top: 2%;
+    margin-bottom: 7%;
     font-size: 100%;
     outline: none;
-    width: 275px;
-    height: 75px;
+    width: 15%;
+    height: 15%;
     border: solid 2px #78C48D;
     border-radius: 50px;
     background-color: #a7fabe;
 }
 input[type='button']{
-    margin-top: 50px;
+    margin-top: 2%;
+    margin-bottom: 7%;
     font-size: 100%;
     outline: none;
-    width: 275px;
-    height: 75px;
+    width: 15%;
+    height: 15%;
     border: solid 2px #78C48D;
     border-radius: 50px;
     background-color: #a7fabe;
@@ -110,7 +112,6 @@ input[type='button']{
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 3.5fr 15fr 2.5fr;
-        overflow: hidden;
     }
 
     header{
@@ -133,7 +134,7 @@ input[type='button']{
     }
     main{
         
-        padding-bottom: 30%;
+        padding-bottom: 34%;
         padding-top: 20%;
         text-align: center;
         grid-row-start: 2;
@@ -191,3 +192,187 @@ input[type='button']{
         background-color: #a7fabe;
     }
 }
+
+@media only screen and (min-width: 578px) and (max-width: 872px){
+    *{
+        padding: 0;
+        margin: 0;
+    }
+    body{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 3.5fr 15fr 2.5fr;
+    }
+
+    header{
+        padding-top: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+    footer{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+    #dni_error{
+        color: red;
+    }
+    
+    #password_error{
+        color: red;
+    }
+    main{
+        
+        padding-bottom: 34%;
+        padding-top: 20%;
+        text-align: center;
+        grid-row-start: 2;
+        grid-row-end: 2;
+        background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
+
+    }
+    
+    h1{
+        font-family: 'Courgette', cursive;
+        font-weight: bold;
+        font-size: 300%;
+        font-style: italic;
+        color: rgb(24, 24, 24);
+        margin-bottom: 5%;
+    }
+
+    input{
+        font-size: 75%;
+        outline: none;
+        width: 75%;
+        height: 10%;
+        margin-bottom: 1%;
+    }
+    #img_header0, #img_header2{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_header1{
+        padding-top: 0;
+        background-image: url("Logo.png");
+        background-size: 90%;
+        background-position: center;
+    }
+    #img_footer0, #img_footer1, #img_footer2, #img_footer3, #img_footer4, #img_footer5{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #usuario{
+        margin-top: 7.5%;
+    }
+    #password{
+        margin-top: 3.5%;
+    }
+    #acceder{
+        margin-top: 10%;
+        font-size: 100%;
+        outline: none;
+        width: 40%;
+        height: 20%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+}
+    
+    @media only screen and (min-width: 873px) and (max-width: 1152px){
+        *{
+            padding: 0;
+            margin: 0;
+        }
+        body{
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 3.5fr 15fr 2.5fr;
+        }
+    
+        header{
+            padding-top: 0;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+        }
+        footer{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+        }
+        #dni_error{
+            color: red;
+        }
+        
+        #password_error{
+            color: red;
+        }
+        main{
+            
+            padding-bottom: 34%;
+            padding-top: 5%;
+            text-align: center;
+            grid-row-start: 2;
+            grid-row-end: 2;
+            background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
+    
+        }
+        
+        h1{
+            font-family: 'Courgette', cursive;
+            font-weight: bold;
+            font-size: 300%;
+            font-style: italic;
+            color: rgb(24, 24, 24);
+            margin-bottom: 5%;
+        }
+    
+        input{
+            font-size: 75%;
+            outline: none;
+            width: 75%;
+            height: 10%;
+            margin-bottom: 1%;
+        }
+        #img_header0, #img_header2{
+            padding-top: 0;
+            background-image: url("Fondo.png");
+            background-size: 100%;
+        }
+        #img_header1{
+            padding-top: 0;
+            background-image: url("Logo.png");
+            background-size: 90%;
+            background-position: center;
+        }
+        #img_footer0, #img_footer1, #img_footer2, #img_footer3, #img_footer4, #img_footer5{
+            padding-top: 0;
+            background-image: url("Fondo.png");
+            background-size: 100%;
+        }
+        #usuario{
+            margin-top: 7.5%;
+        }
+        #password{
+            margin-top: 3.5%;
+        }
+        #acceder{
+            margin-top: 10%;
+            font-size: 100%;
+            outline: none;
+            width: 40%;
+            height: 20%;
+            border: solid 2px #78C48D;
+            border-radius: 50px;
+            background-color: #a7fabe;
+        }
+}
+
+
+
+
