--- a/TeamMaker/Login/Login.css
+++ b/TeamMaker/Login/Login.css
@@ -154,7 +154,7 @@ h1.adminH1{
     }
     main{
         
-        padding-bottom: 34%;
+        padding-bottom: 38%;
         padding-top: 20%;
         text-align: center;
         grid-row-start: 2;
@@ -212,7 +212,7 @@ h1.adminH1{
         background-color: #a7fabe;
     }
     main.mainAdmin{
-        padding-bottom: 10%;
+        padding-bottom: 15%;
         padding-top: 15%;
     }
     input.admin{
@@ -321,96 +321,135 @@ h1.adminH1{
         border-radius: 50px;
         background-color: #a7fabe;
     }
+    main.mainAdmin{
+        padding-bottom: 15%;
+        padding-top: 15%;
+    }
+    input.admin{
+        margin-top:15%;
+        margin-bottom: 10%;
+        width: 60%;
+        height: 15%;
+    }
+    input.adminSalir{
+        margin-top: 5%;
+        margin-bottom:25%;
+        width: 40%;
+        height: 15%;
+    
+    }
+    h1.adminH1{
+        margin-bottom:2%;
+    }
 }
     
-    @media only screen and (min-width: 873px) and (max-width: 1152px){
-        *{
-            padding: 0;
-            margin: 0;
-        }
-        body{
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 3.5fr 15fr 2.5fr;
-        }
+@media only screen and (min-width: 873px) and (max-width: 1152px){
+    *{
+        padding: 0;
+        margin: 0;
+    }
+    body{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 3.5fr 15fr 2.5fr;
+    }
     
-        header{
-            padding-top: 0;
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 1fr;
-        }
-        footer{
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-            grid-template-rows: 1fr;
-        }
-        #dni_error{
-            color: red;
-        }
+    header{
+        padding-top: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+    footer{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+    #dni_error{
+        color: red;
+    }
         
-        #password_error{
-            color: red;
-        }
-        main{
+    #password_error{
+        color: red;
+    }
+    main{
             
-            padding-bottom: 34%;
-            padding-top: 5%;
-            text-align: center;
-            grid-row-start: 2;
-            grid-row-end: 2;
-            background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
+        padding-bottom: 34%;
+        padding-top: 5%;
+        text-align: center;
+        grid-row-start: 2;
+        grid-row-end: 2;
+        background-image: linear-gradient(to bottom right, #F0F0F0, #A8FFC1);
     
-        }
+    }
         
-        h1{
-            font-family: 'Courgette', cursive;
-            font-weight: bold;
-            font-size: 300%;
-            font-style: italic;
-            color: rgb(24, 24, 24);
-            margin-bottom: 5%;
-        }
+    h1{
+        font-family: 'Courgette', cursive;
+        font-weight: bold;
+        font-size: 300%;
+        font-style: italic;
+        color: rgb(24, 24, 24);
+        margin-bottom: 5%;
+    }
     
-        input{
-            font-size: 75%;
-            outline: none;
-            width: 75%;
-            height: 10%;
-            margin-bottom: 1%;
-        }
-        #img_header0, #img_header2{
-            padding-top: 0;
-            background-image: url("Fondo.png");
-            background-size: 100%;
-        }
-        #img_header1{
-            padding-top: 0;
-            background-image: url("Logo.png");
-            background-size: 90%;
-            background-position: center;
-        }
-        #img_footer0, #img_footer1, #img_footer2, #img_footer3, #img_footer4, #img_footer5{
-            padding-top: 0;
-            background-image: url("Fondo.png");
-            background-size: 100%;
-        }
-        #usuario{
-            margin-top: 7.5%;
-        }
-        #password{
-            margin-top: 3.5%;
-        }
-        #acceder{
-            margin-top: 10%;
-            font-size: 100%;
-            outline: none;
-            width: 40%;
-            height: 20%;
-            border: solid 2px #78C48D;
-            border-radius: 50px;
-            background-color: #a7fabe;
-        }
+    input{
+        font-size: 75%;
+        outline: none;
+        width: 75%;
+        height: 10%;
+        margin-bottom: 1%;
+    }
+    #img_header0, #img_header1, #img_header3, #img_header4{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #img_header2{
+        padding-top: 0;
+        background-image: url("Logo.png");
+        background-size: 90%;
+        background-position: center;
+    }
+    #img_footer0, #img_footer1, #img_footer2, #img_footer3, #img_footer4, #img_footer5{
+        padding-top: 0;
+        background-image: url("Fondo.png");
+        background-size: 100%;
+    }
+    #usuario{
+        margin-top: 7.5%;
+    }
+    #password{
+        margin-top: 3.5%;
+    }
+    #acceder{
+        margin-top: 10%;
+        font-size: 100%;
+        outline: none;
+        width: 40%;
+        height: 20%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+    main.mainAdmin{
+        padding-bottom: 15%;
+        padding-top: 15%;
+    }
+    input.admin{
+        margin-top:15%;
+        margin-bottom: 10%;
+        width: 60%;
+        height: 15%;
+    }
+    input.adminSalir{
+        margin-top: 5%;
+        margin-bottom:25%;
+        width: 40%;
+        height: 15%;
+    }
+    h1.adminH1{
+        margin-bottom:2%;
+    }
 }
 
 
