Funcionalidad botonces salir

--- a/TeamMaker/Login/Login.css
+++ b/TeamMaker/Login/Login.css
@@ -197,6 +197,7 @@ h1.profesorH1{
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 3.5fr 15fr 2.5fr;
+        overflow: scroll;
     }
 
     header{
