--- a/TeamMaker/Login/Login.css
+++ b/TeamMaker/Login/Login.css
@@ -190,6 +190,26 @@ input.profesorSalir{
 h1.profesorH1{
     margin-bottom:2%;
 }
+main.gestion{
+    padding-bottom: 3%;
+    padding-top: 1.5%;
+}
+
+input.Gadmin{
+    margin-top:1.5%;
+    margin-bottom: 1.5%;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+    width: 30%;
+    height: 15%;
+}
+
+input.GadminSalir{
+    margin-top: 2.5%;
+    margin-bottom:8.5%;
+    width: 15%;
+    height: 15%;
+}
 
 
 @media only screen and (min-width: 200px) and (max-width: 577px){
