--- a/TeamMaker/Estilos/Style.css
+++ b/TeamMaker/Estilos/Style.css
@@ -109,11 +109,13 @@ input[type='button']{
 }
 main.mainAdmin{
     padding-bottom: 3%;
-    padding-top: 3%;
+    padding-top: 1.5%;
 }
 input.admin{
     margin-top:1.5%;
     margin-bottom: 1.5%;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
     width: 30%;
     height: 15%;
 }
@@ -198,8 +200,8 @@ main.Gestion{
 }
 
 input.Ginput{
-    margin-top:1.5%;
-    margin-bottom: 1.5%;
+    margin-top:3%;
+    margin-bottom: 2%;
     margin-left: 0.5%;
     margin-right: 0.5%;
     width: 30%;
@@ -211,6 +213,104 @@ input.GinputSalir{
     margin-bottom:12%;
     width: 15%;
     height: 15%;
+}
+main.Gestion2{
+    padding-bottom: 3%;
+    padding-top: 3%;
+}
+
+input.Ginput2{
+    margin-top:1.5%;
+    margin-bottom: 1.5%;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+    width: 30%;
+    height: 15%;
+}
+
+input.GinputSalir2{
+    margin-top: 3%;
+    margin-bottom:12%;
+    width: 15%;
+    height: 15%;
+}
+
+main.crudMainUsuario{
+    padding-bottom: 3%;
+    padding-top: 3%;
+}
+
+input.inputUs{
+    font-size: 100%;
+    outline: none;
+    width: 40%;
+    height: 20%;
+    margin-top: 1%;
+    margin-bottom: 0;
+    margin-right: 1%;
+}
+
+input.inputUsEnviar{
+    margin-top: 4%;
+    margin-bottom: 1%;
+    font-size: 100%;
+    outline: none;
+    width: 15%;
+    height: 25%;
+    border: solid 2px #78C48D;
+    border-radius: 50px;
+    background-color: #a7fabe;
+}
+
+input.inputUsVolver{
+    margin-top: 2%;
+    margin-bottom: 8%;
+    font-size: 100%;
+    outline: none;
+    width: 10%;
+    height: 25%;
+    border: solid 2px #78C48D;
+    border-radius: 50px;
+    background-color: #a7fabe;
+}
+
+main.crudMain{
+    padding-bottom: 3%;
+    padding-top: 3%;
+}
+
+input.inputGr{
+    font-size: 100%;
+    outline: none;
+    width: 40%;
+    height: 15%;
+    margin-top: 1%;
+    margin-bottom: 0;
+    margin-right: 1%;
+}
+
+input.inputGrEnviar{
+    margin-top: 2%;
+    margin-bottom: 1%;
+    font-size: 100%;
+    outline: none;
+    width: 15%;
+    height: 25%;
+    border: solid 2px #78C48D;
+    border-radius: 50px;
+    background-color: #a7fabe;
+}
+
+input.inputGrVolver{
+    margin-top: 2%;
+    margin-bottom: 8%;
+    font-size: 100%;
+    outline: none;
+    width: 10%;
+    height: 25%;
+    border: solid 2px #78C48D;
+    border-radius: 50px;
+    background-color: #a7fabe;
 }
 
 @media only screen and (min-width: 200px) and (max-width: 577px){
@@ -398,17 +498,118 @@ input.GinputSalir{
     }
     
     input.Ginput{
-        margin-top:1%;
+        margin-top:5%;
         margin-bottom: 6%;
         width: 60%;
         height: 20%;
     }
     
     input.GinputSalir{
+        margin-top: 25%;
+        margin-bottom:20%;
+        width: 40%;
+        height: 20%;
+    }
+    main.Gestion2{
+        padding-bottom: 30%;
+        padding-top: 20%;
+    }
+    
+    input.Ginput2{
+        margin-top:1%;
+        margin-bottom: 6%;
+        width: 60%;
+        height: 20%;
+    }
+    
+    input.GinputSalir2{
         margin-top: 20%;
         margin-bottom:20%;
         width: 40%;
         height: 20%;
+    }
+
+    h1.crudH1{
+        margin-bottom: 0;
+        font-size: 300%
+    }
+
+    main.crudMainUsuario{
+        padding-bottom: 25%;
+        padding-top: 5%;
+    }
+    
+    input.inputUs{
+        font-size: 100%;
+        outline: none;
+        width: 70%;
+        height: 15%;
+        margin-top: 5%;
+        margin-bottom: 0;
+        margin-right: 1%;
+    }
+    
+    input.inputUsEnviar{
+        margin-top: 10%;
+        margin-bottom: 1%;
+        font-size: 100%;
+        outline: none;
+        width: 45%;
+        height: 15%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+    
+    input.inputUsVolver{
+        margin-top: 5%;
+        margin-bottom: 8%;
+        font-size: 100%;
+        outline: none;
+        width: 30%;
+        height: 15%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+    
+    main.crudMain{
+        padding-bottom: 30%;
+        padding-top: 10%;
+    }
+    
+    input.inputGr{
+        font-size: 100%;
+        outline: none;
+        width: 70%;
+        height: 20%;
+        margin-top: 5%;
+        margin-bottom: 0;
+        margin-right: 1%;
+    }
+    
+    input.inputGrEnviar{
+        margin-top: 10%;
+        margin-bottom: 1%;
+        font-size: 100%;
+        outline: none;
+        width: 45%;
+        height: 20%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+    
+    input.inputGrVolver{
+        margin-top: 5%;
+        margin-bottom: 8%;
+        font-size: 100%;
+        outline: none;
+        width: 30%;
+        height: 20%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
     }
 
 }
@@ -608,6 +809,89 @@ input.GinputSalir{
         width: 40%;
         height: 20%;
     }
+
+    h1.crudH1{
+        margin-bottom: 0;
+        font-size: 300%
+    }
+
+    main.crudMainUsuario{
+        padding-bottom: 25%;
+        padding-top: 5%;
+    }
+    
+    input.inputUs{
+        font-size: 100%;
+        outline: none;
+        width: 70%;
+        height: 15%;
+        margin-top: 5%;
+        margin-bottom: 0;
+        margin-right: 1%;
+    }
+    
+    input.inputUsEnviar{
+        margin-top: 10%;
+        margin-bottom: 1%;
+        font-size: 100%;
+        outline: none;
+        width: 45%;
+        height: 15%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+    
+    input.inputUsVolver{
+        margin-top: 5%;
+        margin-bottom: 8%;
+        font-size: 100%;
+        outline: none;
+        width: 30%;
+        height: 15%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+    
+    main.crudMain{
+        padding-bottom: 30%;
+        padding-top: 10%;
+    }
+    
+    input.inputGr{
+        font-size: 100%;
+        outline: none;
+        width: 70%;
+        height: 20%;
+        margin-top: 5%;
+        margin-bottom: 0;
+        margin-right: 1%;
+    }
+    
+    input.inputGrEnviar{
+        margin-top: 10%;
+        margin-bottom: 1%;
+        font-size: 100%;
+        outline: none;
+        width: 45%;
+        height: 20%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+    
+    input.inputGrVolver{
+        margin-top: 5%;
+        margin-bottom: 8%;
+        font-size: 100%;
+        outline: none;
+        width: 30%;
+        height: 20%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
     
 }   
 @media only screen and (min-width: 873px) and (max-width: 1152px){
@@ -803,6 +1087,89 @@ input.GinputSalir{
         margin-bottom:20%;
         width: 40%;
         height: 20%;
+    }
+
+    h1.crudH1{
+        margin-bottom: 0;
+        font-size: 300%
+    }
+
+    main.crudMainUsuario{
+        padding-bottom: 25%;
+        padding-top: 5%;
+    }
+    
+    input.inputUs{
+        font-size: 100%;
+        outline: none;
+        width: 70%;
+        height: 15%;
+        margin-top: 5%;
+        margin-bottom: 0;
+        margin-right: 1%;
+    }
+    
+    input.inputUsEnviar{
+        margin-top: 10%;
+        margin-bottom: 1%;
+        font-size: 100%;
+        outline: none;
+        width: 45%;
+        height: 15%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+    
+    input.inputUsVolver{
+        margin-top: 5%;
+        margin-bottom: 8%;
+        font-size: 100%;
+        outline: none;
+        width: 30%;
+        height: 15%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+    
+    main.crudMain{
+        padding-bottom: 30%;
+        padding-top: 10%;
+    }
+    
+    input.inputGr{
+        font-size: 100%;
+        outline: none;
+        width: 70%;
+        height: 20%;
+        margin-top: 5%;
+        margin-bottom: 0;
+        margin-right: 1%;
+    }
+    
+    input.inputGrEnviar{
+        margin-top: 10%;
+        margin-bottom: 1%;
+        font-size: 100%;
+        outline: none;
+        width: 45%;
+        height: 20%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+    }
+    
+    input.inputGrVolver{
+        margin-top: 5%;
+        margin-bottom: 8%;
+        font-size: 100%;
+        outline: none;
+        width: 30%;
+        height: 20%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
     }
 
 }
