--- a/TeamMaker/Estilos/Style.css
+++ b/TeamMaker/Estilos/Style.css
@@ -374,6 +374,41 @@ footer.listFoot{
     height: 150px;
 }
 
+input.inputEditUs{
+    font-size: 100%;
+    outline: none;
+    width: 60%;
+    height: 20%;
+    margin-bottom: 1%;
+    margin-top: 0;
+}
+h1.h1EditUs{
+    font-size: 400%;
+    margin-top: 0;
+    margin-bottom: 3%;
+}
+input.inputEditUsEnviar{
+    margin-top: 2%;
+    margin-bottom: 13%;
+    font-size: 100%;
+    outline: none;
+    width: 15%;
+    height: 25%;
+    border: solid 2px #78C48D;
+    border-radius: 50px;
+    background-color: #a7fabe;
+    color: rgb(24, 24, 24);
+}
+
+main.mainEditUs{
+    padding-bottom: 1.5%;
+    padding-top: 1.5%;
+}
+main.mainEditC{
+    padding-bottom: 3%;
+    padding-top: 3%;
+}
+
 @media only screen and (min-width: 200px) and (max-width: 577px){
 
     *{
@@ -748,6 +783,41 @@ footer.listFoot{
     
     footer.listFoot{
         height: 100px;
+    }
+
+    input.inputEditUs{
+        font-size: 100%;
+        outline: none;
+        width: 60%;
+        height: 20%;
+        margin-bottom: 1%;
+        margin-top: 2%;
+    }
+    h1.h1EditUs{
+        font-size: 200%;
+        margin-top: 0;
+        margin-bottom: 10%;
+    }
+    input.inputEditUsEnviar{
+        margin-top: 2%;
+        margin-bottom: 13%;
+        font-size: 100%;
+        outline: none;
+        width: 30%;
+        height: 30%;
+        border: solid 2px #78C48D;
+        border-radius: 50px;
+        background-color: #a7fabe;
+        color: rgb(24, 24, 24);
+    }
+    
+    main.mainEditUs{
+        padding-bottom: 20%;
+        padding-top: 20%;
+    }
+    main.mainEditC{
+        padding-bottom: 25%;
+        padding-top: 25%;
     }
 
 }
